plugins {
  id 'java'
  id 'org.springframework.boot' version '3.5.4'
  id 'io.spring.dependency-management' version '1.1.7'
}

java {
  sourceCompatibility = JavaVersion.VERSION_21
}

dependencies {
  implementation(project(':library')) {
    exclude group: 'org.slf4j', module: 'slf4j-simple'
  }

  // Spring Boot starters
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-websocket'

  // Testing - Spring Boot 3.3.0 manages these versions
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  testImplementation 'org.jsoup:jsoup:1.21.1'

  // Testcontainers for Docker integration tests
  testImplementation 'org.testcontainers:testcontainers:1.21.3'
  testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
}

tasks.named('test') {
  useJUnitPlatform()
  testLogging {
    events "passed", "skipped", "failed"
    exceptionFormat = 'full'
  }
}

